add style container_search

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -32,6 +32,9 @@
     background-color: white;
 }
 .notific .circle i{
-    
+
     color: #8edafc;
 }
+/* main .container_search button{
+border:  1px solid gray;
+} */
