--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -10,6 +10,7 @@
 .background{
     height: 100vh;
     background: linear-gradient(to bottom, #009688 10%, #dcdbd2 10%);
+    z-index: -1;
 }
 
 /* Users */
