--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -5,7 +5,20 @@
     border-radius: 50%;
     overflow: hidden;
 }
-
+.sent{
+    background-color: #d5f9ba;
+    max-width: 50%;
+    position: absolute;
+    right: 0;
+}
+.received{
+    background-color: white;
+    max-width: 50%;
+}
+.date{
+    font-size: 0.5rem;
+    text-align: end;
+}
 /* background */
 .background{
     height: 100vh;
@@ -54,5 +67,9 @@
 .mess main footer{
     bottom: 0;
     background-color: #eaeaea;
+    color: #b1b1b1;
     
+}
+.area_texting{
+    height: 100%;
 }
